# quicksuite

./: CMakeLists.txt  cipher.h  cipher_tests.cpp  client.cpp  lorem_ipsum.txt  messages.h  misc.h  network.h  readme.md  server.cpp
.devcontainer/: Dockerfile  devcontainer.json
